crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_deferred_fold_owned.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_deferred_fold_owned

import core/peek/peek as peek(e) -> e
import core/list/last as last(List[r3]) -> Option[r3]
import core/list/sort_by as sort_by(List[w5], (w5) -> l5) -> List[w5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[z7]) -> List[z7]
import core/io/println as println(h) -> Unit
import core/option/Some as Some(c) -> Option[c]
import core/result/Ok as Ok(e) -> Result[d, e]
import core/result/Err as Err(d) -> Result[d, e]
import core/list/Cons as Cons(f, List[f]) -> List[f]
fn fold(v0: List[r8], v1: t8, v2: (t8, r8) -> t8) -> t8 =
  switch v0 {
    1 ->
      v1
    0 (v3: r8, v4: List[r8]) ->
      let v5: t8 = call_closure v2(v1, v3)
      let v6: t8 = call fold(v4, v5, v2)
      v6
  }

fn test() -> ~Option[Int] =
  let v7: ~List[Int] = construct List::Nil#1()
  let v8: ~List[Int] = construct List::Cons#0(3, v7)
  let v9: ~List[Int] = construct List::Cons#0(2, v8)
  let v10: ~List[Int] = construct List::Cons#0(1, v9)
  let v11: ~Option[Int] = construct Option::Some#0(0)
  let v15: (~Option[Int], Int) -> ~Option[Int] = make_closure(lambda$24, [])
  let v16: ~Option[Int] = call fold(v10, v11, v15)
  v16

fn lambda$24(v12: ~Option[Int], v13: Int) -> ~Option[Int] =
  let v14: ~Option[Int] = construct Option::Some#0(v13)
  v14
