crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_deferred_trait_method.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_deferred_trait_method

trait Default[b11] { default(): ~b11 }
instance ownership__own_deferred_trait_method.Default[Option$Int] { default=Default$$Option$Int$$default }
import core/peek/peek as peek(d) -> d
import core/list/last as last(List[f3]) -> Option[f3]
import core/list/sort_by as sort_by(List[k5], (k5) -> z4) -> List[k5]
import core/list/filter as filter(List[g1], (g1) -> Bool) -> List[g1]
import core/list/fold as fold(List[t1], u1, (u1, t1) -> u1) -> u1
import core/list/map as map(List[v], (v) -> x) -> List[x]
import core/vec/to_list as to_list(Vec[q10]) -> List[q10]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn test() -> ~Option[Int] =
  let v1: Dict[ownership__own_deferred_trait_method.Default, Option[Int]] = get_dict ownership__own_deferred_trait_method.Default[Option[Int]]
  let v0: ~Option[Int] = trait_call ownership__own_deferred_trait_method.Default.default(v1)
  v0

fn Default$$Option$Int$$default() -> ~Option[Int] =
  let v2: ~Option[Int] = construct Option::Some#0(0)
  v2
