crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_deferred_unresolved_callee.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_deferred_unresolved_callee

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[p3]) -> Option[p3]
import core/list/sort_by as sort_by(List[u5], (u5) -> j5) -> List[u5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], u1, (u1, s1) -> u1) -> u1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[x7]) -> List[x7]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn apply(v0: (j8) -> n8, v1: j8) -> n8 =
  let v2: n8 = call_closure v0(v1)
  v2

fn consume(v3: ~String) -> Int =
  42

fn test(v4: ~String) -> Int =
  let v5: (~String) -> Int = make_closure(consume, [])
  let v6: (~String) -> Int = v5
  let v7: Int = call apply(v6, v4)
  v7
