crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fabrication_generic_ok.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fabrication_generic_ok

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[n3]) -> Option[n3]
import core/list/sort_by as sort_by(List[s5], (s5) -> h5) -> List[s5]
import core/list/filter as filter(List[f1], (f1) -> Bool) -> List[f1]
import core/list/fold as fold(List[s1], t1, (t1, s1) -> t1) -> t1
import core/list/map as map(List[u], (u) -> w) -> List[w]
import core/vec/to_list as to_list(Vec[p8]) -> List[p8]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn ok(v0: (b9) -> String, v1: b9) -> String =
  let v2: String = call_closure v0(v1)
  v2

fn test() -> String =
  let v3: (~Option[Int]) -> String = make_closure(lambda$27, [])
  let v5: ~Option[Int] = construct Option::Some#0(42)
  let v6: String = call ok(v3, v5)
  v6

fn lambda$27(v4: ~Option[Int]) -> String =
  "hi"
