crates/ir/tests/ir/snapshots/main__ir__lower__ownership__own_fn_coerce_to_higher_order.snap
---
source: crates/ir/tests/ir/lower.rs
expression: ir_module.to_string()
---
module ownership__own_fn_coerce_to_higher_order

import core/peek/peek as peek(d) -> d
import core/list/last as last(List[i4]) -> Option[i4]
import core/list/sort_by as sort_by(List[n6], (n6) -> c6) -> List[n6]
import core/list/filter as filter(List[h1], (h1) -> Bool) -> List[h1]
import core/vec/to_list as to_list(Vec[a12]) -> List[a12]
import core/io/println as println(g) -> Unit
import core/option/Some as Some(b) -> Option[b]
import core/result/Ok as Ok(d) -> Result[c, d]
import core/result/Err as Err(c) -> Result[c, d]
import core/list/Cons as Cons(e, List[e]) -> List[e]
fn apply(v0: ~(m12) -> q12, v1: m12) -> q12 =
  let v2: q12 = call_closure v0(v1)
  v2

fn double(v3: Int) -> Int =
  let v4: Int = mul_int(v3, 2)
  v4

fn test() -> Int =
  let v5: (Int) -> Int = make_closure(double, [])
  let v6: (Int) -> Int = v5
  let v7: Int = call apply(v6, 21)
  v7
